[package]
name = "grid-iter"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["grid", "iterator", "nostd"]
description = "Ideomatic Grid operations via Iterators"
repository = "https://github.com/mountainfloating/grid-iter"

[dependencies]
# tabwriter = "1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
